--- a/Сlass/4.30b/style.css
+++ b/Сlass/4.30b/style.css
@@ -1,9 +1,11 @@
 h1{
       border: dashed 3px red;
+      background-color: yellow;
 }
 
 #first{
    border: solid green 1px;
+   background: url(img/SG1998.jpg) no-repeat center center;
 }
 
 #two{
@@ -12,6 +14,7 @@ h1{
    border-bottom: solid 4px green;
    border-left: solid 1px blue;
    margin-top: 20px;
+   background-image: url(img/skrip.gif);
    
 }
 
@@ -22,4 +25,12 @@ h1{
 
 #margin{
    margin: 0px;
+}
+
+#p2{
+   font-family: 'Rubik Pixels', cursive;
+}
+
+#p3{
+   font-family: 'Caveat', cursive;
 }
