--- a/Сlass/site/CSS/style.css
+++ b/Сlass/site/CSS/style.css
@@ -143,7 +143,7 @@ h1{
 .elements{
     display: flex;
     justify-content: space-between;
-    margin-top: 80px;
+    margin-top: 80px
 }
 .element{
     height: 90px;
@@ -163,4 +163,141 @@ h1{
     padding-right: 25px;
     width: 61px;
     height: 65px;
+}
+.quote{
+    margin-top: 200px;
+}
+
+                                /*section 2*/
+
+.info{
+    display: flex;
+    justify-content: space-between;
+    margin-top: 80px;
+    position: relative;
+}
+.info_text{
+    z-index: 2;
+}
+.text{
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
+    font-size: 28px;
+    line-height: 130%;
+}
+.text1{
+    font-size: 18px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    color: #2C2C2C;
+    line-height: 175%;
+    margin-top: 32px;
+}
+.possibilities{
+    font-size: 28px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
+    line-height: 130%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    padding-right: 130px;
+    z-index: 2;
+}
+.possibilities li{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.possibilities li h5{
+    margin-left: 32px;
+}
+#infinity{
+    position: absolute;
+    top: 262px;
+    left: 797px;
+    z-index: 1;
+}
+                        /*gradient*/
+.background{
+    background-image: linear-gradient(184.93deg, rgba(10, 10, 10, 0.15) 3.87%, rgba(10, 10, 10, 0) 94.87%);
+    width: 1695px;
+    height: 588px;
+    margin: 100px 0px 0px 100px;
+    position: relative;
+    z-index: 2;
+}                       
+
+                        /*section 3*/ 
+.transport{
+    z-index: 2;
+    margin-top: -288px;
+    position: relative;
+    background: white;
+}         
+.transport h4{
+    font-size: 28px;
+    line-height: 130%;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
+    margin: 80px 0px 32px;
+}
+.Icon_transport h5{
+    font-size: 20px;
+    line-height: 150%;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    color: #2C2C2C;
+    margin-left: 32px;
+}
+.t_text{
+    color: #2C2C2C;
+    font-size: 18px;
+    line-height: 175%;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    margin-bottom: 46px;
+}
+.empty{
+    width: 694px; 
+    height: 824; 
+    padding-right: 130px;
+}
+.t_flex{
+    display: flex;
+    justify-content: space-between;
+}
+.Icon_transport{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+.Icon_transport li{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 32px;
+}
+.test_text{
+    font-size: 24px;
+    line-height: 145%;
+    color: #2C2C2C;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-style: italic;
+    margin: 32px 0px;
+}
+#application{
+    width: 217px;
+    height: 56px;
+    background: #000000;
+    border-radius: 10px;
+    color: white;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    margin-bottom: 32px;
+}
+.text_container{
+    text-align: center;
+    padding-bottom: 32px;
 }
